# Early-Sepsis-Detection-Project

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  mlflow.db  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
assets/demo/: operational_windows_subset.parquet  saved_example_payload.json
configs/: api.yaml  data_pipeline.yaml  model_training.yaml  model_tuning.yaml  orchestration.yaml  training.yaml
data/demo/: sequence_demo_samples.parquet
docker/: Dockerfile.api  docker-compose.yml
public_artifacts/: README.md
public_artifacts/demo/: operational_windows_subset.parquet  saved_example_payload.json  sequence_demo_samples.parquet
scripts/: analyze_calibration.py  audit_demo_inference.py  compare_experiments.py  create_windows.py  curate_demo_assets.py  evaluate_sequence.py  generate_synthetic_data.py  migrate_manifest_paths.py  predict_sequence.py  prepare_public_artifacts.py  preprocess_data.py  print_split_summary.py  run_demo.py  run_prefect_flow.py  select_best_model.py  serve_api.py  sync_manifest_thresholds.py  train_local.py  train_sequence.py  tune_sequence.py  validate_raw_data.py
src/early_sepsis/: __init__.py  logging_utils.py  runtime_paths.py  settings.py
tests/: test_data_pipeline.py  test_demo_inference_debug.py  test_demo_presentation.py  test_demo_startup.py  test_demo_thresholds.py  test_experiment_selection.py  test_ingestion.py  test_manifest_threshold_sync.py  test_sequence_models.py  test_sequence_pipeline.py  test_serving_sequence.py  test_smoke.py  test_torch_dataset.py  test_windowing.py
(+43 files in other folders)
